--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,12 +8,12 @@
       <link rel="icon" href="docs/images/Logo.svg">
   </head>
   <body>
-    <section class="page-header">
+    <header class="page-header">
         <h1 class="title shadow"><a href="/DotN64">DotN64</a></h1>
         <h2 class="subtitle shadow">.N⁶⁴ is a cross-platform emulator in the works.</h2>
         <a class="button" href="/git/Nabile/DotN64">Source</a>
         <a class="button" href="docs">Documentation</a>
-    </section>
+    </header>
     <section class="page-content">
       $body$
     </section>
