Added content and updated style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="icon" href="docs/images/Logo.svg">
   </head>
   <body>
-    <header class="page-header">
+    <header>
         <h1 class="title shadow"><a href="/DotN64">DotN64</a></h1>
         <h2 class="subtitle shadow">.N⁶⁴ is a cross-platform emulator in the works.</h2>
         <a class="button" href="/git/Nabile/DotN64">Source</a>
