--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
     <section class="page-content">
       $body$
     </section>
+    <footer>
+      <hr>
+      <div align="center">
+        <p class="power-indicator" />
+      </div>
+    </footer>
   </body>
 </html>
